.config/VSCodium/logs/20250417T145141/window1/exthost/output_logging_20250417T145529/2-Code.log
[Running] cd "/home/vmdjavem/Documents/the_c_programing_lenguaje/" && gcc HelloWorld.c -o HelloWorld && "/home/vmdjavem/Documents/the_c_programing_lenguaje/"HelloWorld
Hello world
I am a femboy now

[Done] exited with code=0 in 0.133 seconds

[Running] cd "/home/vmdjavem/Documents/the_c_programing_lenguaje/" && gcc HelloWorld.c -o HelloWorld && "/home/vmdjavem/Documents/the_c_programing_lenguaje/"HelloWorld
Hello world
I am a femboy now

[Done] exited with code=0 in 0.032 seconds

[Running] cd "/home/vmdjavem/Documents/the_c_programing_lenguaje/" && gcc HelloWorld.c -o HelloWorld && "/home/vmdjavem/Documents/the_c_programing_lenguaje/"HelloWorld
HelloWorld.c: En la función ‘main’:
HelloWorld.c:5:3: error: declaración implícita de la función ‘printl’; ¿quiso decir ‘printf’? [-Wimplicit-function-declaration]
    5 |   printl("ff")
      |   ^~~~~~
      |   printf
HelloWorld.c:5:15: error: expected ‘;’ before ‘return’
    5 |   printl("ff")
      |               ^
      |               ;
......
    8 |   return 0;
      |   ~~~~~~       

[Done] exited with code=1 in 0.017 seconds

[Running] cd "/home/vmdjavem/Documents/the_c_programing_lenguaje/" && gcc HelloWorld.c -o HelloWorld && "/home/vmdjavem/Documents/the_c_programing_lenguaje/"HelloWorld
Hello world
I am a femboy now

[Done] exited with code=0 in 0.034 seconds

[Running] cd "/home/vmdjavem/Documents/the_c_programing_lenguaje/" && gcc HelloWorld.c -o HelloWorld && "/home/vmdjavem/Documents/the_c_programing_lenguaje/"HelloWorld
Hello world
I am a femboy now

[Done] exited with code=0 in 0.032 seconds

[Running] cd "/home/vmdjavem/Documents/the_c_programing_lenguaje/" && gcc HelloWorld.c -o HelloWorld && "/home/vmdjavem/Documents/the_c_programing_lenguaje/"HelloWorld
Hello world
I am a femboy now

[Done] exited with code=0 in 0.032 seconds

